Updating phone image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="content">
       <div style="float:left;" class="iphone-img">
-          <img src="images/iphone7.png">
+          <img src="images/iphone.png">
           <div class="tnc">
             <p>VIEW CONCERT CREDIT <a href="terms.html">TERMS & CONDITIONS<a></p>
           </div>
