Updating Terms link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div style="float:left;" class="iphone-img">
           <img src="images/iphone.png">
           <div class="tnc">
-            <p>VIEW CONCERT CREDIT <a href="terms.html">TERMS & CONDITIONS<a></p>
+            <p>By continuing past this page you agree to our <a href="http://concerts.livenation.com/h/terms.html">Terms of Use<a>.</p>
           </div>
       </div>
       <div>
@@ -42,7 +42,7 @@
       </div>
    </div>
    <div class="tnc-mob">
-     <p>VIEW CONCERT CREDIT <a href="terms.html">TERMS & CONDITIONS<a></p>
+     <p>By continuing past this page you agree to our <a href="http://concerts.livenation.com/h/terms.html">Terms of Use<a>.</p>
    </div>
 
 
