Adding LN fonts

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		</div>
 		<div class="col-md-8">
 			<img class="app-icon center-div" src="images/app-icon.png">
-			<img class="desc-text center-div" src="images/desc-text.png">
+			<h1 class="zetta">Download the Live Nation App</h1>
 			<div class="dload-btns">
 				<a class="apple-div" href="https://livenation.app.link/taPUd0pRWE">
 					<img class="itunes-btn" src="images/itunes-store.png">
