Updating text styles

--- a/index.html
+++ b/index.html
@@ -56,13 +56,10 @@
 	<div class="row">
 		<div class="col-md-4 d-none d-md-block iphone-img">
 			<img src="images/iphone.png">
-			<div class="tnc">
-			<p>By continuing past this page you agree to our <a href="http://concerts.livenation.com/h/terms.html">Terms of Use<a>.</p>
-			</div>
 		</div>
 		<div class="col-md-8">
 			<img class="app-icon center-div" src="images/app-icon.png">
-			<h1 class="zetta">Download the Live Nation App</h1>
+			<h1 class="bronto">Download the Live Nation App</h1>
 			<div class="dload-btns">
 				<a class="apple-div" href="https://livenation.app.link/taPUd0pRWE">
 					<img class="itunes-btn" src="images/itunes-store.png">
@@ -73,11 +70,11 @@
 			</div>
 		</div>
 	</div>
+	<div class="row d-flex justify-content-center">
+		<div class="col-md-8 tnc">
+			<p class="milli">By continuing past this page you agree to our <a href="http://concerts.livenation.com/h/terms.html">Terms of Use<a>.</p>
+		</div>
 </div>
-<div class="tnc-mob">
-<p>By continuing past this page you agree to our <a href="http://concerts.livenation.com/h/terms.html">Terms of Use<a>.</p>
-</div>
-
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
