--- a/index.html
+++ b/index.html
@@ -4,40 +4,39 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Live Nation Mobile</title>
-	<meta name="description" content="" />
+	<meta name="description" content="Download the Live Nation mobile app" />
 	
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Live Nation Mobile" />
 	<meta property="og:description" content="Download the Live Nation mobile app" />
 	<meta property="og:url" content="https://www.livenation.com/mobile" />
-	<meta property="og:image" content="images/open-graph-logo.png" />
+	<meta property="og:image" content="images/icons/open-graph-logo.png" />
 	<meta property="og:site_name" content="Live Nation Mobil" />
 	
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:title" content="Live Nation Mobile" />
 	<meta name="twitter:description" content="Download the Live Nation mobile app" />
-	<meta name="twitter:image" content="images/twitter-card-logo-1024x512.png" />
+	<meta name="twitter:image" content="images/icons/twitter-card-logo-1024x512.png" />
 	
-	<link rel="mask-icon" href="images/pinned-tab-icon.svg" color="#e31d39">
-	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="images/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="images/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="images/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="mask-icon" href="images/icons/safari-pinned-tab.svg" color="#e31d39">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-icon-180x180.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="images/icons/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="images/icons/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="images/icons/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="images/icons/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="images/icons/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="images/icons/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="images/icons/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="57x57" href="images/icons/apple-icon-57x57.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="images/icons/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="images/icons/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png">
+	<link rel="shortcut icon" href="images/icons/favicon.ico">
 	<meta name="msapplication-TileColor" content="#e31d39">
-	<meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
+	<meta name="msapplication-TileImage" content="images/icons/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
     <link rel="canonical" href="https://www.livenation.com/mobile" />
