Revising link colors

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 		<div class="col-md-8 tnc">
 			<p class="milli">By continuing past this page you agree to our <a href="http://concerts.livenation.com/h/terms.html">Terms of Use<a>.</p>
 		</div>
+	</div>
 </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
