--- a/index.html
+++ b/index.html
@@ -20,28 +20,28 @@
 	<meta name="twitter:description" content="Download the Live Nation mobile app" />
 	<meta name="twitter:image" content="images/icons/twitter-card-logo-1024x512.png" />
 	
-	<link rel="mask-icon" href="images/icons/safari-pinned-tab.svg" color="#e31d39">
-	<link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-icon-180x180.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="images/icons/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="images/icons/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="images/icons/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="images/icons/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="images/icons/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="images/icons/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="images/icons/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="57x57" href="images/icons/apple-icon-57x57.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="images/icons/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="images/icons/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png">
-	<link rel="shortcut icon" href="images/icons/favicon.ico">
-	<meta name="msapplication-TileColor" content="#e31d39">
-	<meta name="msapplication-TileImage" content="images/icons/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+	<link rel="mask-icon" href="images/icons/safari-pinned-tab.svg" color="#e31d39" />
+	<link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-icon-180x180.png" />
+	<link rel="apple-touch-icon" sizes="152x152" href="images/icons/apple-icon-152x152.png" />
+	<link rel="apple-touch-icon" sizes="144x144" href="images/icons/apple-icon-144x144.png" />
+	<link rel="apple-touch-icon" sizes="120x120" href="images/icons/apple-icon-120x120.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="images/icons/apple-icon-114x114.png" />
+	<link rel="apple-touch-icon" sizes="76x76" href="images/icons/apple-icon-76x76.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="images/icons/apple-icon-72x72.png" />
+	<link rel="apple-touch-icon" sizes="60x60" href="images/icons/apple-icon-60x60.png" />
+	<link rel="apple-touch-icon" sizes="57x57" href="images/icons/apple-icon-57x57.png" />
+	<link rel="icon" type="image/png" sizes="192x192"  href="images/icons/android-icon-192x192.png" />
+	<link rel="icon" type="image/png" sizes="96x96" href="images/icons/favicon-96x96.png" />
+	<link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png" />
+	<link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png" />
+	<link rel="shortcut icon" href="images/icons/favicon.ico" />
+	<meta name="msapplication-TileColor" content="#e31d39" />
+	<meta name="msapplication-TileImage" content="images/icons/ms-icon-144x144.png" />
+	<meta name="theme-color" content="#ffffff" />
 
     <link rel="canonical" href="https://www.livenation.com/mobile" />
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -54,24 +54,24 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-4 d-none d-md-block iphone-img">
-			<img src="images/iphone.png">
+			<img src="images/iphone.png" alt="" />
 		</div>
 		<div class="col-md-8">
-			<img class="app-icon center-div" src="images/app-icon.png">
+			<img class="app-icon center-div" src="images/app-icon.png" alt="" />
 			<h1 class="bronto">Download the Live Nation App</h1>
 			<div class="dload-btns">
 				<a class="apple-div" href="https://livenation.app.link/taPUd0pRWE">
-					<img class="itunes-btn" src="images/itunes-store.png">
+					<img class="itunes-btn" src="images/itunes-store.png" alt="" />
 				</a>
 				<a class="droid-div" href="https://livenation.app.link/xI7kcExRWE">
-					<img class="gplay-btn" src="images/google-play.png">
+					<img class="gplay-btn" src="images/google-play.png" alt="" />
 				</a>
 			</div>
 		</div>
 	</div>
 	<div class="row d-flex justify-content-center">
 		<div class="col-md-8 tnc">
-			<p class="milli">By continuing past this page you agree to our <a href="http://concerts.livenation.com/h/terms.html">Terms of Use<a>.</p>
+			<p class="milli">By continuing past this page you agree to our <a href="http://concerts.livenation.com/h/terms.html">Terms of Use</a>.</p>
 		</div>
 	</div>
 </div>
