--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta property="og:description" content="Download the Live Nation mobile app" />
 	<meta property="og:url" content="https://www.livenation.com/mobile" />
 	<meta property="og:image" content="images/icons/open-graph-logo.png" />
-	<meta property="og:site_name" content="Live Nation Mobil" />
+	<meta property="og:site_name" content="Live Nation Mobile" />
 	
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:title" content="Live Nation Mobile" />
