Adding submit button text

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<h3 class="text-center">Text me the app</h3>
 		        <form onsubmit="sendSMS(this); return false;" class="text-center">
 		            <input id="phone" name="phone" type="tel" placeholder="(323) 555-1234" />
-		            <input type="submit" class="btn btn-primary centi"/>
+		            <input type="submit" value="Submit" class="btn btn-primary centi"/>
 		        </form>
 			</div>
 		</div>
