Hiding text feature
Hiding text feature on mobile

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					<img class="gplay-btn" src="images/google-play.png" alt="" />
 				</a>
 			</div>
-			<div class="text-app-form">
+			<div class="text-app-form d-none d-sm-block">
 				<h3 class="text-center">Text me the app</h3>
 		        <form onsubmit="sendSMS(this); return false;" class="text-center">
 		            <input id="phone" name="phone" type="tel" placeholder="(323) 555-1234" />
