--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 var phone = form.phone.value;
                 var linkData = {
                     tags: [],
-                    channel: 'Website',
+                    channel: 'SMS',
                     feature: 'TextMeTheApp',
                     data: {
                         'foo': 'bar'
